test/conformance/chainsaw/mutating-policies/existing/expression/get/configmaps.yaml
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: test-cm-1
  namespace: myns
data:
  key1: value1
