test/conformance/chainsaw/mutating-policies/existing/expression/get/secret.yaml
apiVersion: v1
kind: Secret
metadata:
  name: trigger-secret
  namespace: myns
