test/conformance/chainsaw/mutating-policies/existing/expression/get/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: different-trigger-target-with-expression
spec:
  steps:
  - name: create namespace and configmaps
    try:
    - create:
        file: test-namespace.yaml
    - assert:
        file: test-namespace.yaml
    - create:
        file: configmaps.yaml
    - assert:
        file: configmaps.yaml
  - name: create policy
    use:
      template: ../..//../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: sleep
    try:
    - sleep:
        duration: 5s
  - name: wait-mutating-policy-ready
    use:
      template: ../..//../../_step-templates/mutating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: test-mpol-different-trigger-target-expression
  - name: trigger mutation by creating the secret
    try:
    - apply:
        file: secret.yaml
  - name: sleep
    try:
    - sleep:
        duration: 5s
  - name: verify configmaps are mutated
    try:
    - assert:
        file: configmaps-assert.yaml
